FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/Usage_Rates_Static__c.object-meta.xml
<CustomObject>
    <description>Holds the Usage Rates - % and Amount - for products that have a static value and are not dependent upon a combination of attribute values entered on the quote line during quoting</description>
    <label>Usage Rates - Static</label>
    <nameField>
        <displayFormat>UR{000}</displayFormat>
        <label>Usage Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usage Rates - Statics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>