FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Created from JIRA ticket: BOPI-313.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>