FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>Created from JIRA ticket: BOPI-313.</description>
    <label>Product Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>