FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created from JIRA ticket: BOPI-313.</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Usage Rates - Statics</relationshipLabel>
    <relationshipName>Usage_Rates_Statics</relationshipName>
    <type>Lookup</type>
</CustomField>