FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/fields/Rate_Detail__c.field-meta.xml
<CustomField>
    <fullName>Rate_Detail__c</fullName>
    <description>Created from JIRA ticket: BOPI-313.</description>
    <inlineHelpText>Enter rate details to appear on Quote Line, eg &apos;per transaction&apos;</inlineHelpText>
    <label>Rate Detail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>