FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Created from JIRA ticket: BOPI-313.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>