FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/fields/Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>Usage_Rate__c</fullName>
    <description>Created from JIRA ticket: BOPI-313.</description>
    <label>Usage Rate %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>