FLY wire David/force-app/main/default/objects/Usage_Rates_Static__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Usage_Rate__c</columns>
    <columns>Usage_Rate_Amt__c</columns>
    <columns>Rate_Detail__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>